# grader

./: LICENCE  Status.hs  default.nix  grader.cabal  grader.nix
grader-send/: default.nix  grader-send.py
src/: Grader.hs
src/Codec/MIME/: Decode.hs  Parse.hs  Type.hs  Utils.hs
src/Grader/: Course.hs  Monad.hs  Paths.hs  Submission.hs  User.hs
src/Grader/Receiver/: Mail.hs
