name:               grader
version:            0.1
synopsis:           Grader for programming assignments
license:            BSD3
license-file:       LICENCE
author:             Kirill Elagin
maintainer:         kirelagin@gmail.com
extra-source-files: README
cabal-version:      >= 1.8
build-type:         Simple

Source-repository head
  type: git
  location: git://github.com/kirelagin/grader.git


Library
    hs-source-dirs: src
    exposed-modules:
          Grader
        , Grader.Course
        , Grader.Monad
        , Grader.Paths
        , Grader.Submission
        , Grader.User

        , Codec.MIME.Decode
        , Codec.MIME.Parse
        , Codec.MIME.Type
        , Codec.MIME.Utils

    build-depends:
          aeson
        , base
        , bytestring
        , containers
        , directory
        , email-validate
        , filepath
        , gitlib
        , gitlib-libgit2
        , mtl
        , tagged
        , text
        , time
        , transformers
        , unix
        , yaml

        , encoding
        , sandi

    ghc-options: -Wall

Executable status
    main-is: Status.hs

    build-depends:
          base
        , containers
        , email-validate
        , grader
        , mtl
        , text

    ghc-options: -Wall

Executable receive-mail
    main-is: src/Grader/Receiver/Mail.hs

    build-depends:
          base
        , bytestring
        , containers
        , directory
        , email-validate
        , encoding
        , filepath
        , grader
        , mtl
        , text
        , text-icu
        , transformers
        , unix

    ghc-options: -Wall
